remove DatatypeConverter usage